--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,springcloud-config/config-dev.yml version=1"
+  info: "master branch，springcloud-config/config-dev.yml version=1"
